Begin debuff work

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,1 +1,21 @@
-<p>editor works!</p>
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="Towers">
+    <app-tower></app-tower>
+  </mat-tab>
+
+  <mat-tab label="Enemies">
+    <app-enemy></app-enemy>
+  </mat-tab>
+
+  <mat-tab label="Levels">
+    <app-level></app-level>
+  </mat-tab>
+
+  <mat-tab label="Damage Types">
+    <app-damage-type></app-damage-type>
+  </mat-tab>
+
+  <mat-tab label="Debuffs">
+    <app-debuff></app-debuff>
+  </mat-tab>
+</mat-tab-group>
