--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -21,7 +21,7 @@
 </mat-tab-group>
 
 <br />
-<p>{{ json.layout | json }}</p>
+<p style="color: white">{{ json.layout | json }}</p>
 
 <input [(ngModel)]="importString" />
 <button (click)="import()">Import JSON</button>
